2020. 6.20. Added id_bump member in zTexture in order to handle multiple bump maps. [zeo_texture]
2020. 6.18. Modified zTextureFromZTK to read a bump map. [zeo_texture]
2020. 6.18. Added __z_texture_bump_read_file, zTextureSetBumpReadFunc, zTextureBumpReadFuncIsAssigned and zTextureBumpReadFile. [zeo_texture]
2020. 6.18. Added zTextureBumpAlloc. [zeo_texture, zeo_errmsg]
2020. 6.17. Added _zTextureTypeFromZTK and _zTextureTypeFPrintZTK. [zeo_texture]
2020. 6.17. Added type member in zTexture to define bump mapping. [zeo_texture]
2020. 6.17. Added zVec3DAAError. [zeo_vec3d]
2020. 5.15. Modified _zTextureFileFromZTK. [zeo_texture]
2020. 5.15. Added zTextureReadFuncIsAssigned. [zeo_texture]
2020. 5.15. Debugged zTextureInit. [zeo_texture]
2020. 5.15. Implemented ZTK processors for zTexture. [zeo_texture, zeo_shape, zeo_mshape]
2020. 5.15. Defined zTextureArray and added an array of textures in zMShape3D. [zeo_texture, zeo_mshape]
2020. 5.15. Added texture member in zShape3D. [zeo_shape]
2020. 5.15. Defined ZEO_ERR_TEXTURE_INVALID_COORD_ID, ZEO_WARN_TEXTURE_COORD_UNMATCH and ZEO_WARN_TEXTURE_EMPTY. [zeo_errmsg, zeo_texture]
2020. 5.15. Added zeo_texture. [zeo_texture, zeo_shape]
2020. 5.15. Added zVec2DFromZTK. [zeo_vec2d]
2020. 5.15. Added zTri2D class. [zeo_tri2d]
2020. 5.15. Modified zEdge3DFPrint and zTri3DFPrint. [zeo_elem]
2020. 5.15. Modified zVec3DDataFPrint to put commas between numbers. [zeo_vec3d]
2020. 5.15. Modified zMat3DFromZTK. [zeo_mat3d]
2020. 5.15. Modified specifications of zVec2D and zMat2D. [zeo_vec2d, zeo_mat2d, zeo_elem]
2020. 5.14. Added zVec2DArray. [zeo_vec2d]
2020. 5. 4. Added zPlane3DPointIsOn. [zeo_elem]
2020. 5. 3. Modified zTri3DPointDist. [zeo_elem]
2020. 5. 2. Abolished zeo_col_abbtree. [zeo_col, zeo_col_aabbtree, makefile]
2020. 5. 2. Renamed pmin and pmax members of zAABox3D to min and max, respectively. [zeo_bv_aabb, zeo_col_box, zeo_col_aabbtree]
2020. 4.30. Debugged zBBall. [zeo_bv_bball]