@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.6
+VERSION=1.5.7
 
 DEPENDENCY="zeda=1.2.30;zm=1.2.19"
