@@ -30,6 +30,8 @@ __EXPORT bool zGJK(zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c1, zVec3D 
 __EXPORT bool zGJKDepth(zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c1, zVec3D *c2);
 __EXPORT bool zGJKPL(zVec3DList *pl1, zVec3DList *pl2, zVec3D *ca, zVec3D *cb);
 
+__EXPORT bool zGJKPoint(zVec3D pl[], int n, zVec3D *p, zVec3D *c);
+
 __END_DECLS
 
 #endif /* __ZEO_COL_GJK_H__ */
