@@ -1,3 +1,4 @@
+2020. 7. 2. Added zGJKPoint. [zeo_col_gjk]
 2020. 6.20. Added id_bump member in zTexture in order to handle multiple bump maps. [zeo_texture]
 2020. 6.18. Modified zTextureFromZTK to read a bump map. [zeo_texture]
 2020. 6.18. Added __z_texture_bump_read_file, zTextureSetBumpReadFunc, zTextureBumpReadFuncIsAssigned and zTextureBumpReadFile. [zeo_texture]
